--- a/src/components/Row/Row.css
+++ b/src/components/Row/Row.css
@@ -1,28 +1,50 @@
 .row__posters {
-  display: flex;
-  flex-direction: row;
-  overflow-y: hidden;
-  overflow-x: scroll;
+  width: 95%;
   padding: 20px;
   column-gap: 20px;
+  margin-top: 20px;
+  margin-left: auto;
+  margin-right: auto;
 }
-.row__posters::-webkit-scrollbar {
-  height: 10px;
+.slick-track {
+  margin-right: 20px;
 }
-.row__posters::-webkit-scrollbar-track {
-  margin: 0 20px;
-  border: 1px solid #000;
-  padding: 2px 0;
-  background-color: #2e2e2e;
+
+.row__posters > button {
+  opacity: 0;
+  height: 100%;
+  width: 5vw;
+  z-index: 1;
 }
-.row__posters::-webkit-scrollbar-thumb {
-  border-radius: 10px;
-  box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
-  background-color: #4f4f4f;
-  border: 1px solid #000;
+.row__posters > button:hover {
+  opacity: 1;
+  transition: opacity 0.4s ease 0s;
+}
+
+ul li button {
+  &:before {
+    font-size: 10px;
+    color: rgb(150, 158, 171);
+  }
+}
+
+li.slick-active button:before {
+  color: white;
+}
+
+.slick-list {
+  overflow: hidden;
+}
+
+.slick-prev {
+  left: -45px;
+}
+
+.slick-next {
+  right: -45px;
 }
 .row {
-  margin-top: 20px;
+  margin-top: 30px;
   color: white;
 }
 .row__poster {
@@ -36,4 +58,7 @@
 }
 .row__largePoster {
   max-height: 230px;
+}
+.row__largePoste:hover {
+  transform: scale(1.1);
 }
